--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Static Site</title>
+    <title>Jean Héricotte</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,7 @@
         <h1>Welcome to My Static Site</h1>
     </header>
     <main>
-        <p>This is a static site hosted on GitHub Pages.</p>
+        <p>I am trying to do things. it is not important yet.</p>
     </main>
     <script src="script.js"></script>
 </body>
