--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <p>I am trying to do things. it is not important yet.</p>
+        <button onclick="window.location.href='/mon-cv';">Voir mon CV</button>
     </main>
     <script src="script.js"></script>
 </body>
