--- a/mon-cv/index.html
+++ b/mon-cv/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+    <link rel="icon" href="/favicon.png" type="image/png">
 </head>
 <body>
     <h1>Curriculum Vitae</h1>
