--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Static Site</h1>
+        <h1>Bienvenue.</h1>
     </header>
     <main>
-        <p>I am trying to do things. it is not important yet.</p>
         <button onclick="window.location.href='/mon-cv';">Voir mon CV</button>
     </main>
     <script src="script.js"></script>
