--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jean Héricotte</title>
+        <meta name="description" content="Site personnel de Jean Héricotte, incluant mon CV et mes projets.">
+    <meta name="keywords" content="Jean Héricotte, CV, projets, développeur, site personnel">
+    <meta name="author" content="Jean Héricotte">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/favicon.png" type="image/png">
 </head>
