--- a/mon-cv/index.html
+++ b/mon-cv/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <style>
+        body, html {
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Curriculum Vitae</h1>
-    <embed src="cv.pdf" type="application/pdf" width="100%" height="600px" />
+    <iframe src="cv.pdf" type="application/pdf"></iframe>
 </body>
 </html>
