--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jean Héricotte</title>
         <meta name="description" content="Site personnel de Jean Héricotte, incluant mon CV et mes projets.">
-    <meta name="keywords" content="Jean Héricotte, CV, projets, développeur, site personnel">
+    <meta name="keywords" content="Jean Héricotte, CV, projets, développeur, site personnel, daslow, jean, Jean, hericotte, Héricotte, Hericotte">
     <meta name="author" content="Jean Héricotte">
 
     <link rel="stylesheet" href="styles.css">
@@ -17,6 +17,8 @@
     </header>
     <main>
         <button onclick="window.location.href='/mon-cv';">Voir mon CV</button>
+        
+        <button onclick="window.location.href='/my-resume';">see my Resume</button>
     </main>
     <script src="script.js"></script>
 </body>
